--- a/T-CHAT.css
+++ b/T-CHAT.css
@@ -1,71 +1,82 @@
-@charset "utf-8";
-/*========= LoadingのためのCSS ===============*/
-
-/* Loading背景画面設定　*/
-#splash {
-    /*fixedで全面に固定*/
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-    background: #eee;
-    text-align: center;
-    color: #fff;
+.logo {
+    width: 230px;
+    margin-top: 10px;
 }
 
-/* Loading画像中央配置　*/
-#splash_logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-/* Loading アイコンの大きさ設定　*/
-#splash_logo svg {
-    width: 300px;
-}
-
-/*=============== SVGアニメーション内の指定 =================*/
-
-/*アニメーション前の指定*/
-#mask path {
-    fill-opacity: 0;
-    /*最初は透過0で見えない状態*/
-    transition: fill-opacity .5s;
-    /*カラーがつく際のアニメーション0.5秒で変化*/
-    fill: none;
-    /*塗りがない状態*/
-    stroke: #333;
-    /*線の色*/
-}
-
-/*アニメーション後に.doneというクラス名がで付与された時の指定*/
-#mask.done path {
-    fill: #333;
-    /*塗りの色*/
-    fill-opacity: 1;
-    /*透過1で見える状態*/
-    stroke: none;
-    /*線の色なし*/
-}
-
-/*========= レイアウトのためのCSS ===============*/
-
-#container {
-    width: 100%;
-    height: 100vh;
-    background: #ccc;
+.nav-menu {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    margin-top: 70px;
+    list-style: none;
+    position: relative;
+    right: 300px;
 }
 
-a {
-    color: #333;
+.botton-area {
+    width: 150px;
+    position: relative;
+    left: 300px;
 }
 
-a:hover {
-    text-decoration: none;
+.nav-menu input {
+    width: 250px;
+    position: relative;
+    left: 20px;
+
+}
+
+.nav-menu li {
+    margin-left: 70px;
+}
+
+.nav-menu a {
+    color: #696969;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0.4%;
+}
+
+.nav-menu a:hover {
+    color: #ff7f50;
+}
+
+#ranking {
+    width: 300px;
+    height: 50px;
+
+
+    position: relative;
+    left: 100px;
+}
+
+#name1 {
+    width: 800px;
+    height: 150px;
+    margin: 5px;
+
+    position: relative;
+    left: 600px;
+}
+
+#name2 {
+    width: 800px;
+    height: 150px;
+    margin: 5px;
+    position: relative;
+    left: 600px;
+}
+
+#name3 {
+    width: 800px;
+    height: 150px;
+    margin: 5px;
+
+    position: relative;
+    left: 600px;
 }
