--- a/T-CHAT.css
+++ b/T-CHAT.css
@@ -1,81 +1,74 @@
 .logo {
     width: 230px;
-    margin-top: 10px;
 }
-
-.nav-menu {
-    display: flex;
-    font-size: 1.25rem;
-    text-transform: uppercase;
-    margin-top: 70px;
-    list-style: none;
-    position: relative;
-    right: 300px;
-}
-
-.botton-area {
-    width: 150px;
-    position: relative;
-    left: 300px;
-}
-
-.nav-menu input {
-    width: 250px;
-    position: relative;
-    left: 20px;
-
-}
-
-.nav-menu li {
-    margin-left: 70px;
-}
-.nav-menu a {
-    color: #696969;
-}
-
 header {
-    display: flex;
-    justify-content: space-between;
+    background: #fff; /*ヘッダーの背景色 */
+    color: #fff; /* ヘッダーの文字色 */
+    padding: 9px;
+}
+
+.name{
+    color: #696969;
+
+}
+nav {
+    text-transform: uppercase;
+    list-style: none;
+
+display: flex;
+justify-content: space-around;
+    background: #fff;
+        color: #000; /* ナビの文字色 */
+    padding: 9px; /* ナビの上下左右の間隔 */
+  }
+  body {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
+    background: #fff;
     max-width: 1300px;
-    margin: 0 auto;
-    padding: 0.4%;
-}
+  }
+  main {
+    float: right;
+    width: 70%;
+    background: #bbda53;
+    padding: 9px;
+    box-sizing: border-box;
+  }
+  h1, h2, h3 {
+    margin: 10px 0;
+  }
+  section {
+    background: #e5ef99;
+    color: #000;
+    padding: 9px;
+    margin-bottom: 9px;
+  }
+  article {
+    background: #fff;
+    color: #000;
+    padding: 9px;
+  }
+  aside {
+    float: right;
+    width: 30%;
+    padding: 9px;
+    box-sizing: border-box;
+  }
+  footer {
+    background: #dd7663;
+    color: #fff;
+    padding: 9px;
+  }
+  .container {
+    overflow: hidden;
+  }
+  .container::after {
+    content: "";
+    clear: both;
+    display: block;
+  }
 
-.nav-menu a:hover {
-    color: #ff7f50;
-}
 
-#ranking {
-    width: 300px;
-    height: 50px;
-
-
-    position: relative;
-    left: 100px;
-}
-
-#name1 {
-    width: 800px;
-    height: 150px;
-    margin: 5px;
-
-    position: relative;
-    left: 600px;
-}
-
-#name2 {
-    width: 800px;
-    height: 150px;
-    margin: 5px;
-    position: relative;
-    left: 600px;
-}
-
-#name3 {
-    width: 800px;
-    height: 150px;
-    margin: 5px;
-
-    position: relative;
-    left: 600px;
-}
