--- a/detail/detail.css
+++ b/detail/detail.css
@@ -46,28 +46,48 @@ body {
 main {
   float: right;
   width: 70%;
-  background: #bbda53;
-  padding: 9px;
+  background: #5397d4;
+  padding: 2px;
   box-sizing: border-box;
+  overflow: scroll;
 }
 
-h1,
-h2,
+h1 {
+  margin: 5px 0;
+  font-size: 20px;
+}
+h2 {
+  margin: 5px 0;
+  font-size: 28px;
+}
 h3 {
   margin: 10px 0;
 }
+h4 {
+  border-bottom: 2px solid #000;
+}
+h5 {
+  border-bottom: 2px solid #000;
+}
+h6 {
+  margin: 0;
+  font-size: 25px;
+}
+h7 {
+  font-weight: bolder;
+}
 
 section {
-  background: #e5e5e5;
+  background: #fff;
   color: #000;
-  padding: 9px;
-  margin-bottom: 9px;
+  padding: 2px;
+  /* margin-bottom: 9px; */
 }
 
 article {
   background: #fff;
   color: #000;
-  padding: 9px;
+  padding: 2px;
 }
 
 aside {
@@ -82,11 +102,6 @@ p {
   height: 80%;
   background: #fff;
   color: #000;
-  padding: 9px;
-}
-footer {
-  background: #dd7663;
-  color: #fff;
   padding: 9px;
 }
 
