--- a/detail/detail.css
+++ b/detail/detail.css
@@ -46,10 +46,9 @@ body {
 main {
   float: right;
   width: 70%;
-  background: #5397d4;
+  background: #fff;
   padding: 2px;
   box-sizing: border-box;
-  overflow: scroll;
 }
 
 h1 {
@@ -96,7 +95,7 @@ aside {
 
   padding: 9px;
   box-sizing: border-box;
-  background-color: #e5ef99;
+  background-color: #fff;
 }
 p {
   height: 80%;
@@ -109,10 +108,25 @@ p {
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
+  overflow: scroll;
+  background: #5397d4;
+  padding: 2px;
 }
 
 .container::after {
   content: "";
   clear: both;
   display: block;
+}
+.article-category {
+  background-color: #f2f2f2;
+  border-radius: 15px;
+  color: #000000;
+  padding: 5px 8px 5px 8px;
+}
+.unsolved-category {
+  background-color: #ffd966;
+  border-radius: 15px;
+  color: #000000;
+  padding: 5px 8px 5px 8px;
 }
