--- a/T-CHAT Home.css
+++ b/T-CHAT Home.css
@@ -1,23 +1,37 @@
 .logo {
-  width: 230px;
+  width: 20%;
 }
 
 header {
-  background: #fff;
+  background: #f2f2f2;
   /*ヘッダーの背景色 */
   color: #fff;
   /* ヘッダーの文字色 */
   padding: 9px;
 }
-.name {
-  color: #696969;
+.home {
+  color: #000000;
+  font-family: "Arial Black";
+  text-decoration: none;
+}
+
+.question {
+  color: #000000;
+  font-family: "Arial Black";
+  text-decoration: none;
 }
 
 .search {
   width: 20%;
 }
+::placeholder {
+  color: #e6e6e6;
+  text-align: left;
+}
+
 .POST {
   width: 10%;
+  background-color: #7f7f7f;
 }
 
 nav {
@@ -40,13 +54,13 @@ body {
   margin-bottom: 0;
   padding: 0;
   background: #fff;
-  max-width: 1300px;
+  max-width: 1980px;
 }
 
 main {
   float: right;
   width: 70%;
-  background: #bbda53;
+  background: #fff;
   padding: 9px;
   box-sizing: border-box;
 }
@@ -73,22 +87,19 @@ article {
 aside {
   float: left;
   width: 30%;
-
   padding: 9px;
   box-sizing: border-box;
-  background-color: #e5ef99;
+  background-color: #FFF2CC;
+  border: 2px solid #D3B863;
 }
-p {
+p .rank {
   height: 80%;
   background: #fff;
   color: #000;
   padding: 9px;
+  font-family: "Arial", "BIZ UDPゴシック";
 }
-footer {
-  background: #dd7663;
-  color: #fff;
-  padding: 9px;
-}
+
 
 .container {
   overflow: hidden;
