--- a/T-CHAT Home.css
+++ b/T-CHAT Home.css
@@ -1,5 +1,6 @@
 .logo {
   width: 230px;
+  float: left;
 }
 
 header {
@@ -60,7 +61,6 @@ main {
   width: 70%;
   padding: 2px;
   box-sizing: border-box;
-  background: #59cbff;
 }
 
 h1 {
@@ -79,8 +79,26 @@ h3 {
 section {
   background: #fff;
   color: #000;
-  padding: 2px;
+  padding: 10px;
   /* margin-bottom: 9px; */
+}
+.box1 {
+  background: #8faadc;
+  color: #000;
+  padding: 2px;
+  margin-bottom: 5px;
+}
+.box2 {
+  background: #ffd966;
+  color: #000;
+  padding: 2px;
+  margin-bottom: 5px;
+}
+.box3 {
+  background: #ff6969;
+  color: #000;
+  padding: 2px;
+  margin-bottom: 5px;
 }
 article {
   background: #fff;
