--- a/T-CHAT Home.css
+++ b/T-CHAT Home.css
@@ -59,11 +59,18 @@ body {
 }
 
 main {
+  border-radius: 40px; /*要素を丸くする */
+  border-width: 100px; /* 上、右、下、左の順に指定 */
   float: right;
-  width: 70%;
+  width: 80%;
   background: #fff;
   padding: 9px;
   box-sizing: border-box;
+  border: 2px solid black; /* 2pxの幅で黒い縁線を追加 */
+  padding: 20px;
+  padding-left: 100px;
+  padding-right: 100px; /* 右側に20pxのパディングを設定 */
+  /* 右側に20pxのパディングを設定 */
 }
 
 h1 {
@@ -120,12 +127,13 @@ article {
 
 aside {
   float: left;
-  width: 30%;
+  width: 20%;
 
   padding: 9px;
   box-sizing: border-box;
   background-color: #fff2cc;
   border: 2px solid #fff;
+  padding-right: ; /* 右側に20pxのパディングを設定 */
 }
 
 p .rank {
