--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -124,4 +124,22 @@ nav ul {
   background-color: #fff;
   border-radius: 8px 8px 8px 8px;
 }
+.box1 {
+  display: flex;
+}
+.list {
+  width: 10%;
+  font-size: 15px;
+  min-height: 50px;
+  max-height: 200px;
+  margin-right: 30px;
+}
+.tag {
+  min-height: 50px;
+  max-height: 200px;
+  width: 30%;
+}
+.text {
+  width: 80%;
+}
 /*header*/
