--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -8,7 +8,9 @@ header {
   width: 98.3%;
   border: 2px solid white;
 }
-
+.bordered-element {
+  border: 10px solid #d9d9d9; /* ボーダーの幅と色を指定 */
+}
 .home {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -133,13 +135,64 @@ nav ul {
   min-height: 50px;
   max-height: 200px;
   margin-right: 30px;
+  border: 2px solid #c0c0c0;
 }
 .tag {
   min-height: 50px;
   max-height: 200px;
-  width: 30%;
-}
-.text {
   width: 80%;
+  margin-top: 10px;
+  border: 2px solid #c0c0c0;
+  border-left: none;
+
+  /* 例: 枠線をオレンジ色に設定 */
+}
+::placeholder {
+  color: #000000;
+}
+
+.text {
+  width: 85%;
+  border: 2px solid #c0c0c0;
 }
 /*header*/
+
+.fa-solid.fa-photo-film {
+  border: 2px solid #c0c0c0; /* 例: 枠線をオレンジ色に設定 */
+  padding: 10px;
+  color: #a8a7a7; /* アイコンの色を緑に変更 */
+  position: relative;
+  top: 5px;
+}
+.fa-solid.fa-tags {
+  padding: 10px;
+  border: 2px solid #c0c0c0; /* 例: 枠線をオレンジ色に設定 */
+
+  color: #a8a7a7; /* アイコンの色を緑に変更 */
+  position: relative;
+  top: 5px;
+  border-right: none;
+  border-left: none;
+}
+.fa-solid.fa-border {
+  border: 2px solid #c0c0c0; /* 例: 枠線をオレンジ色に設定 */
+  padding: 10px;
+  color: #a8a7a7; /* アイコンの色を緑に変更 */
+  position: relative;
+  top: 5px;
+  left: 10px;
+}
+.box2 {
+  display: flex;
+  align-items: center;
+}
+
+.textarea {
+  width: 100%;
+  height: 100vh;
+  font-size: 20px; /* 例: フォントサイズを16ピクセルに設定 */
+  box-sizing: border-box; /* ボックスモデルを調整 */
+  margin: 10px 0; /* 上下に10pxのマージンを設定 */
+  border: 2px solid #c0c0c0;
+  content: "";
+}
