--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -194,5 +194,7 @@ nav ul {
   box-sizing: border-box; /* ボックスモデルを調整 */
   margin: 10px 0; /* 上下に10pxのマージンを設定 */
   border: 2px solid #c0c0c0;
-  content: "";
+}
+.textarea::placeholder {
+  color: #5b5a5a;
 }
