--- a/T-CHAT Post/T-CHAT Post.css
+++ b/T-CHAT Post/T-CHAT Post.css
@@ -31,7 +31,7 @@ header {
   margin-right: 30px;
   border: 2px solid #c0c0c0;
   border-radius: 8px 8px 8px 8px;
-  font-size: 18px;
+  font-size: 20px;
   font-family: "M PLUS Rounded 1c", sans-serif;
 }
 .tag {
@@ -40,6 +40,8 @@ header {
   width: 77%;
   margin-top: 10px;
   margin-right: 20px;
+  font-size: 24px;
+
   border: 2px solid #c0c0c0;
   border-left: none;
   border-radius: 0 8px 8px 0;
@@ -49,11 +51,12 @@ header {
 ::placeholder {
   color: #000000;
   font-family: "M PLUS Rounded 1c", sans-serif;
-  font-size: 18px;
+  font-size: 24px;
 }
 
 .text {
   width: 85%;
+  font-size: 24px;
   border: 2px solid #c0c0c0;
   border-radius: 8px 8px 8px 8px;
 }
@@ -124,7 +127,7 @@ header {
 .textarea {
   width: 97.5%;
   height: 100vh;
-  font-size: 20px; /* 例: フォントサイズを16ピクセルに設定 */
+  font-size: 28px; /* 例: フォントサイズを16ピクセルに設定 */
   box-sizing: border-box; /* ボックスモデルを調整 */
   margin: 10px 0; /* 上下に10pxのマージンを設定 */
   border: 2px solid #c0c0c0;
@@ -133,6 +136,7 @@ header {
 }
 .textarea::placeholder {
   color: #5b5a5a;
+  font-size: 28px; /* placeholder のフォントサイズを変更 */
 }
 
 /* ボタンのスタイル */
