--- a/detail/detail.css
+++ b/detail/detail.css
@@ -1,53 +1,3 @@
-.logo {
-  width: 230px;
-}
-
-header {
-  background: #f2f2f2;
-  /*ヘッダーの背景色 */
-  color: #fff;
-  /* ヘッダーの文字色 */
-  padding: 9px;
-}
-
-.home {
-  color: #000000;
-  font-family: "Arial Black";
-  text-decoration: none;
-}
-.question {
-  color: #000000;
-  font-family: "Arial Black";
-  text-decoration: none;
-}
-
-.search {
-  width: 20%;
-  background-color: #7f7f7f;
-}
-
-::placeholder {
-  color: #e6e6e6;
-  text-align: left;
-}
-
-.POST {
-  width: 10%;
-}
-
-nav {
-  font-size: 20px;
-  text-transform: uppercase;
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-  background: #fff;
-  color: #000;
-  /* ナビの文字色 */
-  padding: 9px;
-  /* ナビの上下左右の間隔 */
-}
-
 body {
   margin-left: auto;
   margin-right: auto;
@@ -58,80 +8,202 @@ body {
   max-width: 1980px;
 }
 
-main {
-  float: right;
-  width: 70%;
-  background: #59cbff;
-  padding: 2px;
-  box-sizing: border-box;
+h2 {
+  margin: 10px 0;
+  background-color: #fff;
 }
 
-h1 {
-  margin: 5px 0;
-  font-size: 20px;
-}
-h2 {
-  margin: 5px 0;
-  font-size: 28px;
-}
 h3 {
-  margin: 10px 0;
+  margin: 2px 0;
 }
 h4 {
-  border-bottom: 2px solid #000;
-}
-h5 {
-  border-bottom: 2px solid #000;
-}
-h6 {
+  vertical-align: bottom;
   margin: 0;
+  padding: 0;
+}
+
+.background {
+  background-color: #f2f2f2;
+  border: 10px solid #e3e9ee; /* ページ全体に10pxの灰色のボーダーを設定 */
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+header {
+  background-color: #f2f2f2; /* ヘッダーの背景色を設定 */
+  color: #fff; /* テキストの色を設定 */
+  padding: 10px; /* 内側の余白を設定 */
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 98.3%;
+  border: 2px solid white;
+  margin-bottom: 10px;
+}
+
+.home {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: #000000;
+  font-family: "Arial Black";
+  text-decoration: none;
+  margin-right: 5px;
+  margin-left: 15px;
   font-size: 25px;
 }
-h7 {
-  font-weight: bolder;
-}
 
-section {
-  background: #fff;
-  color: #000;
-  padding: 2px;
-  /* margin-bottom: 9px; */
+.question {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: #000000;
+  font-family: "Arial Black";
+  text-decoration: none;
+  margin-right: 15px;
+  font-size: 25px;
 }
-
-article {
-  background: #fff;
-  color: #000;
-  padding: 2px;
-}
-
-aside {
-  float: left;
-  width: 30%;
-  padding: 9px;
-  box-sizing: border-box;
-  background-color: #fff2cc;
-}
-p {
-  height: 80%;
-  background: #fff;
-  color: #000;
-  padding: 9px;
-  font-family: "Arial", "BIZ UDPゴシック";
-}
-
-.container {
-  overflow: hidden;
+.search-form {
   display: flex;
-  flex-wrap: wrap;
-  overflow: scroll;
-  background: #fff;
-  padding: 2px;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 3px;
 }
 
-.container::after {
+.search {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 8px 0 0 8px;
+  width: 250px;
+  background-color: #f8f8f8;
+  border: 2px solid #7f7f7f;
+  font-size: 25px;
+}
+::placeholder {
+  color: #e6e6e6;
+  text-align: left;
+  font-family: "Arial Black", "MS Gothic";
+  padding-left: 3px;
+}
+
+.search-form button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 35px;
+  margin-right: 7px;
+  border: none;
+  border-radius: 0 8px 8px 0;
+  background-color: #2589d0;
+  cursor: pointer;
+}
+
+.search-form button::after {
+  width: 20px;
+  height: 20px;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%23fff%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E");
+  background-repeat: no-repeat;
   content: "";
-  clear: both;
-  display: block;
+}
+
+.notification {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  text-decoration: none;
+  margin-right: 20px;
+  font-size: 29px;
+}
+
+.login {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 3px;
+  padding-right: 8px;
+  font-family: "Arial Black";
+  color: white;
+  background-color: #afdfe4;
+  border: #afdfe4;
+  border-radius: 8px 8px 8px 8px;
+  font-size: 25px;
+  text-decoration: none;
+}
+
+.post {
+  margin-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 3px;
+  padding-right: 10px;
+  font-family: "Arial Black";
+  color: white;
+  background-color: #92d050;
+  border: #92d050;
+  border-radius: 8px 8px 8px 8px;
+  font-size: 25px;
+}
+.logo img {
+  margin-left: 5px;
+  margin-right: 40px;
+  max-width: 150px; /* ロゴ画像の
+最大幅を設定 */
+}
+
+nav ul {
+  list-style: none; /* リストのマーカーを非表示に */
+  padding: 0;
+  display: flex;
+  gap: 30px;
+  background-color: #fff;
+  border-radius: 8px 8px 8px 8px;
+}
+main {
+  /* 上、右、下、左の順に指定 */
+  float: right;
+  width: 98.3%;
+  height: 100%;
+  margin-left: 38px;
+  box-sizing: border-box;
+  padding-top: 6px;
+  padding-left: 8px;
+  padding-right: 8px; /* 右側に20pxのパディングを設定 */
+  /* 右側に20pxのパディングを設定 */
+  overflow: auto;
+  scroll-snap-align: start;
+}
+.box1 {
+  border: 2px solid #8faadc;
+  color: #000;
+  margin-bottom: 6px;
+  border-radius: 26px;
+  background: #fdf6e9;
+}
+section {
+  color: #000;
+  padding: 11px;
+  /* margin-bottom: 9px; */
+  border-radius: 26px;
+}
+h3 {
+  margin: 2px 0;
+}
+h1 {
+  margin: 2px 0;
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.large {
+  background: #fdf6e9;
+  color: #000;
+  padding: 3px;
+  margin-top: 5px;
+  margin-bottom: 7px;
+  margin-left: 5px;
+  font-size: 28px;
+  font-weight: bolder;
 }
 .article-category {
   background-color: #f2f2f2;
@@ -140,8 +212,32 @@ p {
   padding: 5px 8px 5px 8px;
 }
 .unsolved-category {
-  background-color: #ffd966;
+  background-color: #8faadc;
   border-radius: 15px;
   color: #000000;
   padding: 5px 8px 5px 8px;
+}
+.border {
+  border-top: 1px solid #000; /* 線の色と太さを指定 */
+}
+.text-medium {
+  font-size: 20px;
+}
+.text-small {
+  font-size: 18px;
+}
+.response {
+  background-color: #fff;
+}
+.answer {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #fff;
+}
+.text {
+  width: 60%;
+  height: 20px;
+}
+.text::placeholder {
+  color: #000;
 }
