--- a/T-CHAT Home.css
+++ b/T-CHAT Home.css
@@ -156,6 +156,7 @@ header {
   border: #92D050;
   border-radius: 8px 8px 8px 8px;
   font-size: 25px;
+  text-decoration: none;
 }
 
 .logo img {
@@ -239,6 +240,10 @@ section {
   color: #000;
   margin-bottom: 6px;
   border-radius: 26px;
+}
+
+a.article {
+  text-decoration: none;
 }
 
 .box2 {
