--- a/detail/detail.css
+++ b/detail/detail.css
@@ -193,13 +193,7 @@ main {
   margin-bottom: 6px;
   border-radius: 26px;
   background: #fdf6e9;
-}
-
-section {
-  color: #000;
   padding: 11px;
-  /* margin-bottom: 9px; */
-  border-radius: 26px;
 }
 
 h3 {
@@ -252,31 +246,32 @@ h1 {
 
 .response {
   background-color: #fff;
-}
-
-.answer {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background-color: #fff;
+  border-radius: 8px 8px 8px 8px;
 }
 
 .text {
-  width: 60%;
+  width: 20%;
   height: 20px;
+  background-color: #f2f2f2;
+  border-radius: 8px 8px 8px 8px;
 }
 
 .text::placeholder {
   color: #000;
 }
+.answer {
+  margin-top: 10px;
+  background-color: #fff;
+}
 .answer2 {
   display: flex;
   overflow: hidden; /* float要素の後にくる要素が影響を受けないようにするために使用 */
-  justify-content: flex-end; /* ボタンを右側に寄せる */
   flex-direction: column;
 }
 
 .element {
-  border: 2px solid #000;
+  border: 1px solid #000;
+  border-radius: 8px 8px 0 0;
 }
 #selectedImage {
   width: 100px; /* Adjust the width as needed */
@@ -286,12 +281,21 @@ h1 {
   display: none;
 }
 #previewButton {
-  margin-left: auto; /* 左側の余白をautoに設定 */
+  margin-left: 1150px; /* 左側の余白をautoに設定 */
 }
-#answer {
+#answer-button {
   margin-left: 1200px; /* ボタンとテキストエリアの間に余白を追加 */
+  background-color: #55c500;
 }
-#textarea {
-  height: 200px;
-  width: 100%;
+.textarea {
+  border-radius: 0 0 8px 8px;
+}
+.textarea::placeholder {
+  color: #a8a7a7; /* アイコンの色を緑に変更 */
+}
+#answer-button {
+  width: 120px; /* 任意の幅を指定 */
+  height: 40px; /* 任意の高さを指定 */
+  font-size: 28px; /* 任意のフォントサイズを指定 */
+  margin-left: auto;
 }
